debug deploy path

--- a/pwa-extra-credit/config/config.json
+++ b/pwa-extra-credit/config/config.json
@@ -7,17 +7,18 @@
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "username": "arx8hfeufhfxeton",
+    "password": "w9p7il0h220i9hth",
+    "database": "imptgj0c3yxzv3e8",
+    "host": "dt3bgg3gu6nqye5f.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   },
   "production": {
-   "use_env_variable": "mysql://arx8hfeufhfxeton:w9p7il0h220i9hth@dt3bgg3gu6nqye5f.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/imptgj0c3yxzv3e8",
-   "dialect": "mysql",
-   "dialectOptions": { 
-      "charset": "utf8" 
-   } 
+    "username": "arx8hfeufhfxeton",
+    "password": "w9p7il0h220i9hth",
+    "database": "imptgj0c3yxzv3e8",
+    "host": "dt3bgg3gu6nqye5f.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+    "use_env_variable": "JAWSDB_URL",
+    "dialect": "mysql"
   }
 }
