--- a/pwa-extra-credit/config/config.json
+++ b/pwa-extra-credit/config/config.json
@@ -1,24 +1,23 @@
 {
   "development": {
-    "username": "arx8hfeufhfxeton",
-    "password": "w9p7il0h220i9hth",
-    "database": "imptgj0c3yxzv3e8",
-    "host": "dt3bgg3gu6nqye5f.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+    "username": "root",
+    "password": "password",
+    "database": "extra_credit_db",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
-    "username": "arx8hfeufhfxeton",
-    "password": "w9p7il0h220i9hth",
-    "database": "imptgj0c3yxzv3e8",
-    "host": "dt3bgg3gu6nqye5f.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+    "username": "root",
+    "password": null,
+    "database": "database_test",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
-    "username": "arx8hfeufhfxeton",
-    "password": "w9p7il0h220i9hth",
-    "database": "imptgj0c3yxzv3e8",
-    "host": "dt3bgg3gu6nqye5f.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
-    "use_env_variable": "JAWSDB_URL",
-    "dialect": "mysql"
+   "use_env_variable": "JAWSDB_URL",
+   "dialect": "mysql",
+   "dialectOptions": { 
+      "charset": "utf8" 
+   } 
   }
 }
