--- a/pwa-extra-credit/package.json
+++ b/pwa-extra-credit/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "eslint": "^7.13.0",
     "express": "^4.16.3",
